--- a/package.json
+++ b/package.json
@@ -4,33 +4,30 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build --experimental-integrations",
+    "build": "astro build --verbose",
     "preview": "astro preview",
     "format": "prettier -w  --plugin-search-dir=. .",
     "format2": "prettier -w  .",
     "lint": "eslint . --ext .ts,.js,.mjs",
     "lint:fix": "eslint . --fix --ext .ts,.js,.mjs",
-    "critical": "node scripts/generate-critical.js",
-    "prod": "astro build && pnpm run critical",
-    "ncu": "ncu -u --timeout 1500000",
     "push": "git add . && git commit -m 'auto' && git push"
   },
   "devDependencies": {
     "@alextim/utils": "^0.1.24",
     "@astrojs/sitemap": "^0.1.0",
     "@astrojs/tailwind": "^0.2.1",
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
     "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.29",
+    "@types/node": "^17.0.30",
     "@types/prettier": "^2.6.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "aos": "^3.0.0-beta.6",
-    "astro": "^1.0.0-beta.19",
+    "astro": "^1.0.0-beta.20",
     "astro-icon": "^0.7.1",
     "astro-imagetools": "^0.5.8",
-    "astro-robots-txt": "^0.1.8",
+    "astro-robots-txt": "^0.1.10",
     "autoprefixer": "^10.4.5",
     "cssnano": "^5.1.7",
     "eslint": "^8.14.0",
@@ -42,11 +39,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "fast-glob": "^3.2.11",
     "js-yaml": "^4.1.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "photoswipe": "^5.2.4"
   }
 }
