--- a/package.json
+++ b/package.json
@@ -10,27 +10,31 @@
     "format2": "prettier -w  .",
     "lint": "eslint . --ext .ts,.js,.mjs",
     "lint:fix": "eslint . --fix --ext .ts,.js,.mjs",
-    "push": "git add . && git commit -m 'auto' && git push"
+    "push": "git add . && git commit -m 'auto' && git push",
+    "version": "changeset version",
+    "publish": "changeset publish",
+    "ncu": "ncu -u -x astro-imagetools"
   },
   "devDependencies": {
     "@alextim/utils": "^0.1.24",
     "@astrojs/sitemap": "^0.1.0",
     "@astrojs/tailwind": "^0.2.1",
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.17.12",
     "@babel/eslint-parser": "^7.17.0",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.30",
-    "@types/prettier": "^2.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@changesets/cli": "^2.22.0",
+    "@types/eslint": "^8.4.2",
+    "@types/node": "^17.0.33",
+    "@types/prettier": "^2.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@typescript-eslint/parser": "^5.24.0",
     "aos": "^3.0.0-beta.6",
-    "astro": "^1.0.0-beta.20",
+    "astro": "^1.0.0-beta.27",
     "astro-icon": "^0.7.1",
-    "astro-imagetools": "^0.5.8",
-    "astro-robots-txt": "^0.1.10",
-    "autoprefixer": "^10.4.5",
+    "astro-imagetools": "0.5.8",
+    "astro-robots-txt": "^0.1.15",
+    "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.7",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -42,11 +46,11 @@
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
-    "prettier-plugin-tailwindcss": "^0.1.10",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "photoswipe": "^5.2.4"
+    "photoswipe": "^5.2.7"
   }
 }
